# apc

./: .gitignore  mainpage.dox  manifest.xml
data/: bin_G.json  bin_H.json
json/: test1.json
launch/: apc_services.launch  bin_looker_service_node.launch  capture_image_service_node.launch  cubbyhole_marker.launch  grasp_annotator.launch  grasp_saver.launch  grasp_saver_node.launch  grasp_viewer.launch  grasp_viewer_node.launch  head_pointer_service.launch  marker_pose_service_node.launch  object_marker.launch  object_marker_node.launch  object_pose_service.launch  robot_state_service.launch  test.launch
msg/: BinWorkOrder.msg  ExecStatus.msg  Grasp.msg  (+2 more)
src/: IK.py  (+28 more)
src/icp_shelf/: CMakeCache.txt  CMakeLists.txt  alignBox.cpp  both.pcd  corner3D.cpp  icp.txt  icpShelf.cpp  scene.pcd  sceneRot.pcd  sceneRot.ply  shelf.pcd  shelf.ply  shelf1.pcd  template_alignment.cpp  transform.txt  transformed.pcd  trimDepth.cpp  utils.cpp  utils.hpp
src/icp_shelf/clouds/: shelf1.pcd  shelfFront.pcd  shelfFrontAll.pcd  shelfFrontRot.pcd  shelfFrontRot2.pcd  shelfRot.pcd
src/icp_shelf/meshes/: shelf.ply  shelf1.ply  shelfFront.ply  shelfFrontAll.ply  shelfFrontRot.ply  shelfFrontRot2.ply  shelfRot.ply
src/perception/segShelf/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cropped.pcd  ctest.pcd  segmentShelf  segmentShelf.cpp  segmented.pcd  shelf_pose.txt  transformCloud  transformCloud.cpp  transformed.pcd  utils.cpp  utils.hpp
src/perception/segShelf/clouds/: raw1.ply
src/perception/segShelf/raw1/: cropped.pcd  cropped.ply  segmented.pcd  segmented.ply
(+456 files in other folders)
